<resources>
    <string name="app_name">VideoCutter</string>
    <string name="loading">Đang tải...</string>
    <string name="video_cutter_title">Video Cutter</string>
    <string name="my_studio_title">My Studio</string>
    <string name="see_all_title">See All</string>
    <string name="get_start">Get start</string>
    <string name="library_title">Library</string>
    <string name="you_don_t_have_any_video_ntap_the_below_to_get_started">You don\'t have any video.\nTap the below to Get Started</string>
    <string name="title_empty">No data</string>
    <string name="long_press_to_sort_the_videos">Long press to sort the videos</string>
    <string name="add_item">Add (%s)</string>
    <string name="count_file">(%s)</string>
    <string name="max_item_select">Only a maximum of %s files can be selected</string>
    <string name="time_default">00:01</string>
    <string name="next_title">Next</string>
    <string name="save_title">Save</string>
    <string name="time_start">00:00</string>
    <string name="stop">STOP</string>
    <string name="feature_crop">Crop</string>
    <string name="feature_cut">Cut</string>
    <string name="feature_speed">Speed</string>
    <string name="feature_filter">Filter</string>
    <string name="feature_music">Music</string>
    <string name="feature_rotate">Rotate</string>
    <string name="crop_custom">Custom</string>
    <string name="crop_instagram">Instagram</string>
    <string name="crop4x5">4x5</string>
    <string name="crop5x4">5x4</string>
    <string name="crop9x16">9x16</string>
    <string name="crop16x9">16x9</string>
    <string name="crop3x2">3x2</string>
    <string name="crop2x3">2x3</string>
    <string name="crop4x3">4x3</string>
    <string name="crop3x4">3x4</string>
    // speed
    <string name="speed">Speed</string>
    <string name="_0.75x">0.75x</string>
    <string name="_0.5x">0.5x</string>
    <string name="_0.25x">0.25x</string>
    <string name="_1x">1x</string>
    <string name="_2x">2x</string>
    <string name="_3x">3x</string>
    <string name="_4x">4x</string>

    // filter
    <string name="filter_original">Original</string>
    <string name="filter_spring">Spring</string>
    <string name="filter_summer">Summer</string>
    <string name="filter_fall">Fall</string>
    <string name="filter_winter">Winter</string>

    <string name="music">Music</string>
    <string name="nope">Nope</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="suggest">Suggest</string>
    <string name="long_press_to_cut_audio">Long press to cut audio</string>
    <string name="close">Close</string>
    <string name="setting">Setting</string>
    <string name="video_quality">Video Quality</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

</resources>
