<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivVideoQualityBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/dimen_12"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvVideoQualityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:fontFamily="@font/fbase_font_bold"
            android:text="@string/video_quality"
            android:textColor="@color/neutral_1"
            android:textSize="@dimen/dimen_text_size_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivVideoQualityBack" />

        <com.example.videocutter.presentation.widget.leftrighttexticon.LeftRightTextIconView
            android:id="@+id/lrtiVideoQualityLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/tvVideoQualityTitle"
            app:lrti_tv_left="@string/low" />

        <com.example.videocutter.presentation.widget.leftrighttexticon.LeftRightTextIconView
            android:id="@+id/lrtiVideoQualityMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/lrtiVideoQualityLow"
            app:lrti_tv_left="@string/medium" />

        <com.example.videocutter.presentation.widget.leftrighttexticon.LeftRightTextIconView
            android:id="@+id/lrtiVideoQualityHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/lrtiVideoQualityMedium"
            app:lrti_tv_left="@string/high" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
