<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient_center_orange_light">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_60"
            android:fontFamily="@font/fbase_font_bold"
            android:text="@string/video_cutter_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivHomeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/dimen_14"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="@id/tvHomeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHomeTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20"
            android:fontFamily="@font/fbase_font_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_20"
            android:text="@string/you_don_t_have_any_video_ntap_the_below_to_get_started"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_16"
            app:layout_constraintBottom_toTopOf="@+id/llHomeStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llHomeStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:background="@drawable/shape_gradient_orange_corner_12"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHomeTitle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:src="@drawable/ic_cut_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fbase_font_bold"
                android:paddingVertical="@dimen/dimen_34"
                android:text="@string/get_start"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_28" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHomeRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvHomeRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginBottom="@dimen/dimen_20"
                android:fontFamily="@font/fbase_font_bold"
                android:text="@string/my_studio_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_22"
                app:layout_constraintBottom_toTopOf="@id/cvHome"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvHomeSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:padding="@dimen/dimen_10"
                android:text="@string/see_all_title"
                android:textColor="@color/color_1"
                app:layout_constraintBottom_toBottomOf="@id/tvHomeRecent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvHomeRecent" />

            <com.example.videocutter.presentation.widget.recyclerview.CollectionView
                android:id="@+id/cvHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/dimen_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:background="@color/black"
                tools:layout_height="@dimen/dimen_200" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:visibility="gone"
            android:focusable="true">

            <com.example.videocutter.presentation.widget.cut.ver2.TrimVideoView
                android:id="@+id/trim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
